added some styling to form popup. popup closes on submit

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,11 @@
     cursor: crosshair !important;
     border: 5px rgb(49 142 19) solid;
 }
+
+.leaflet-popup-content-wrapper {
+    background-color: rgb(255 244 158);;
+    color: black;
+}
+.leaflet-popup-tip {
+    background-color: rgb(255 244 158);;
+}
